acceleration-calc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acceleration-calc
spec:
  selector:
    app: acceleration-calc
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
